updated the docker file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,11 +65,13 @@ services:
       STORAGE_S3_REGION: ${STORAGE_REGION}
       STORAGE_S3_s3BucketEndpoint: true
 
+      CORS_ENABLED: ${DIRECTUS_CORS_ENABLED}
       CORS_ORIGIN: ${DIRECTUS_CORS_ORIGIN}
+      CORS_METHODS: ${DIRECTUS_CORS_METHODS}
 
       # Make sure to set this in production
       # (see https://docs.directus.io/self-hosted/config-options#general)
-      # PUBLIC_URL: 'https://directus.example.com'
+      PUBLIC_URL: 'https://workout-admin.elt.onl'
 
 networks:
   directus:
